--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -544,7 +544,7 @@ a.learn-more-link.webconsole-learn-more-link {
 .webconsole-filteringbar-wrapper {
   display: grid;
   grid-row: 1 / 2;
-  grid-template-columns: 1fr auto auto;
+  grid-template-columns: 1fr max-content auto auto;
   /* Wrap so the "Hidden messages" bar can go to its own row if needed */
   flex-wrap: wrap;
   --primary-toolbar-height: 29px;
@@ -559,13 +559,17 @@ a.learn-more-link.webconsole-learn-more-link {
   min-height: var(--primary-toolbar-height);
 }
 
+.webconsole-filterbar-primary > div {
+  border-bottom: 0;
+}
+
 .devtools-toolbar.webconsole-filterbar-secondary {
   --separator-inline-margin: 5px;
   display: flex;
-  width: 100%;
   align-items: center;
   -moz-user-select: none;
   grid-column: 1 / -1;
+  min-height: var(--primary-toolbar-height);
 }
 
 .split-console-close-button-wrapper {
